<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_run"
        android:icon="@drawable/run"
        android:title="@string/menu_run"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_theme"
        android:icon="@drawable/color"
        android:title="@string/menu_theme"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_close"
        android:icon="@drawable/close"
        android:title="@string/menu_close"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        app:showAsAction="never" />
</menu>