<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/spacing_xl">

    <ImageView
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_run" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_s"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_whole_name"
            android:textAppearance="?attr/textAppearanceTitleMedium" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textAppearance="?attr/textAppearanceBodySmall" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_s"
            android:text="@string/about_message_1"
            android:textAppearance="?attr/textAppearanceBodyMedium" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_s"
            android:text="@string/about_message_2"
            android:textAppearance="?attr/textAppearanceBodyMedium" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xs"
            android:layout_marginBottom="@dimen/spacing_xs"
            android:text="@string/about_message_3"
            android:textAppearance="?attr/textAppearanceBodyMedium" />

    </LinearLayout>

</LinearLayout>